# bot

./: .editorconfig  .gitignore  LICENSE  README.md  SECURITY.md  afk.py  bank.py  config.py  database.py  developer.py  fun.py  handling.py  help.py  main.py  pagination.py  pyproject.toml  requirements.txt  staff.py  trading.py  utils.py  xp.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml
