[tool.poetry]
name = "sunset-bot"
version = "1.0.0"
description = ""
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = "^1.7.3"
"dislash.py" = "^1.3.2"
better-profanity = "^0.7.0"
dnspython = "^2.1.0"
dynamic-yaml = "^1.2.3"
expiringdict = "^1.2.1"
fuzzywuzzy = "^0.18.0"
inflect = "^5.3.0"
mongoengine = "^0.23.1"
requests = "^2.25.1"
simpleeval = "^0.9.10"

[tool.poetry.dev-dependencies]
blue = "^0.6.0"
taskipy = "^1.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79

[tool.taskipy.tasks]
run = "python main.py"
